[package]
name = "bags-server"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "bags-server"
path = "src/main.rs"

[dependencies]
bags-fees-v2 = { path = "../../stacks/bags" }
hyperstack-server = { version = "0.5" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# TLS crypto provider for rustls (required by yellowstone-vixen/tonic)
rustls = { version = "0.23", default-features = false, features = ["ring"] }
